[styling][s] - fix click event on mobile for nav items

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -7,3 +7,9 @@
     display none
 .dropdown-wrapper .dropdown-title
   pointer-events none
+
+@media (max-width: 720px)
+  .dropdown-wrapper .dropdown-title
+    pointer-events auto
+    outline none
+
